added para at html in portfolio branch

--- a/portfolio-2025/src/app/portfolio/portfolio.component.html
+++ b/portfolio-2025/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,2 @@
 <p>portfolio works!</p>
+<p>Welcome to my portfolio page. Here you can find information about my projects, skills, and experiences.</p>
